# Clipster

./: .gitignore  README.md  package.json  pnpm-lock.yaml
scripts/: setup.sh
src/: App.css  App.tsx
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/prompts/: viral_clips.md
src-tauri/scripts/: face_crop.py
src-tauri/src/: lib.rs  main.rs  pipeline.rs
